# social_navigation

./: .gitignore  CMakeLists.txt  README.md  goal.json  package.xml
config/: 301_1f.pgm  actor.json  actor2.json  actor_301.json  build_costmap.py  collision_301_1f.txt  collsion_301_1f.txt  general_scenario.json  general_scenario_easy.json  general_scenario_extra.json  general_scenario_hard.json  general_scenario_medium.json  goal_medium.json  hokuyo.sdf  jackal.sdf  jackal.urdf  map.json  map2.json  map_301.json  ped_traj_candidate.json  sample_path_full.pkl  scenario_1.json  scenario_2.json  scenario_3.json  scenario_4.json  scenario_5.json  scenario_6.json  scenario_readme.txt  test.py
include/: GPR.h  Kernel.h  RRT.h  Transform.h  pixel.h  point.h  utils.h
launch/: default.launch
lib/: GPR.cpp  Kernel.cpp  RRT.cpp  Transform.cpp  pixel.cpp  point.cpp  utils.cpp
msg/: Cluster.msg  ClusterArray.msg  Command.msg  GlobalPathRequest.msg  GlobalPathResponse.msg  GlobalPlannerRequest.msg  GlobalPlannerResponse.msg  InstanceArray.msg  InstanceImage.msg  Path.msg  PathArray.msg  PedestrianArray.msg  RRT.msg  RRTresponse.msg  Request.msg  StateInfo.msg  Status.msg  Trajectory.msg  TrajectoryArray.msg
plugins/: HumanPlugin.cc  HumanPlugin.hh
scripts/: actor_scheduler.py  bc.py  cpo_discrete.py  data_collector.py  demo.py  demo_collector.py  demo_ped_sim.py  env.py  eval_policy.py  eval_policy_specific.py  gazebo_master.py  gazebo_master_eval.py  gazebo_master_mcts.py  gazebo_master_old.py  gazebo_master_old_v2.py  gazebo_master_specific.py  goal.json  goal_7_5m.json  goal_easy.json  goal_hard.json  goal_mcts_example.json  goal_mcts_example_v2.json  goal_postprocessing.py  goal_supereasy.json  load_sample.py  mcts_sac.py  mcts_trc.py  model.py  model_discrete.py  ped_traj_sample.json  pedestrian_2d_detector.py  pedestrian_detector.py  pedestrian_trajectory_sampler.py  ppo_models.py  replay_buffer.py  replay_buffer_safe.py  rrt_demo.py  sac.py  sac_discrete.py  sac_discrete_eval.py  (+17 more)
scripts/wandb/: latest-run
scripts/wandb/offline-run-20220509_120624-5knva4ke/: run-5knva4ke.wandb
scripts/wandb/offline-run-20220509_120648-27ikwgbp/: run-27ikwgbp.wandb
scripts/wandb/offline-run-20220509_120712-35tzvdyw/: run-35tzvdyw.wandb
scripts/wandb/offline-run-20220509_120741-bga1v1by/: run-bga1v1by.wandb
scripts/wandb/offline-run-20220509_120800-19n8ez5t/: run-19n8ez5t.wandb
scripts/wandb/offline-run-20220509_120904-15zxwva1/: run-15zxwva1.wandb
scripts/wandb/offline-run-20220509_120931-1kcdbyvs/: run-1kcdbyvs.wandb
scripts/wandb/offline-run-20220509_120956-2rhfmiy8/: run-2rhfmiy8.wandb
scripts/wandb/run-20220429_211821-39qgn16x/: run-39qgn16x.wandb
scripts/wandb/run-20220429_212320-23ihzkin/: run-23ihzkin.wandb
scripts/wandb/run-20220429_212449-27zyd898/: run-27zyd898.wandb
scripts/wandb/run-20220429_214356-ilvj8zpb/: run-ilvj8zpb.wandb
scripts/wandb/run-20220429_224534-qlyxxqud/: run-qlyxxqud.wandb
scripts/wandb/run-20220429_224720-2h3nlxdg/: run-2h3nlxdg.wandb
scripts/wandb/run-20220430_124511-2yap8dyp/: run-2yap8dyp.wandb
scripts/wandb/run-20220501_105733-1efil0wx/: run-1efil0wx.wandb
scripts/wandb/run-20220501_105815-1atjvmwg/: run-1atjvmwg.wandb
scripts/wandb/run-20220501_110406-24nk7gsy/: run-24nk7gsy.wandb
scripts/wandb/run-20220501_110532-m2t72vxe/: run-m2t72vxe.wandb
scripts/wandb/run-20220501_121855-3b1xfr8g/: run-3b1xfr8g.wandb
scripts/wandb/run-20220501_123548-2ngwp2u1/: run-2ngwp2u1.wandb
scripts/wandb/run-20220501_130358-3rmqkngf/: run-3rmqkngf.wandb
scripts/wandb/run-20220501_141114-22q16v3r/: run-22q16v3r.wandb
scripts/wandb/run-20220501_165912-13d195ro/: run-13d195ro.wandb
scripts/wandb/run-20220501_170132-pk8v172y/: run-pk8v172y.wandb
scripts/wandb/run-20220501_170204-1l9012fj/: run-1l9012fj.wandb
scripts/wandb/run-20220501_230541-q9ak6d87/: run-q9ak6d87.wandb
scripts/wandb/run-20220501_230930-bkllut0h/: run-bkllut0h.wandb
scripts/wandb/run-20220501_231657-1817jqfn/: run-1817jqfn.wandb
scripts/wandb/run-20220501_231853-5u4bl20g/: run-5u4bl20g.wandb
scripts/wandb/run-20220501_232027-19qo76po/: run-19qo76po.wandb
scripts/wandb/run-20220501_232259-1qo5epa7/: run-1qo5epa7.wandb
scripts/wandb/run-20220501_232420-1xe63lom/: run-1xe63lom.wandb
scripts/wandb/run-20220501_232511-1zby4bqd/: run-1zby4bqd.wandb
scripts/wandb/run-20220501_232731-1uydn1rj/: run-1uydn1rj.wandb
scripts/wandb/run-20220501_232914-aim41p4l/: run-aim41p4l.wandb
scripts/wandb/run-20220501_233043-2i28tnvx/: run-2i28tnvx.wandb
scripts/wandb/run-20220501_233806-35zc02i6/: run-35zc02i6.wandb
scripts/wandb/run-20220501_234110-qo1vos91/: run-qo1vos91.wandb
scripts/wandb/run-20220501_234312-t9k8nm4z/: run-t9k8nm4z.wandb
scripts/wandb/run-20220501_234759-d3vza4lg/: run-d3vza4lg.wandb
scripts/wandb/run-20220501_234810-2jldz5ip/: run-2jldz5ip.wandb
scripts/wandb/run-20220501_234953-4vafi2mb/: run-4vafi2mb.wandb
scripts/wandb/run-20220501_235834-2sl7mmwi/: run-2sl7mmwi.wandb
scripts/wandb/run-20220502_000249-1o41itud/: run-1o41itud.wandb
scripts/wandb/run-20220502_000658-7ompl4mc/: run-7ompl4mc.wandb
scripts/wandb/run-20220502_000721-fu9uznpa/: run-fu9uznpa.wandb
scripts/wandb/run-20220502_001116-3k5g7xtk/: run-3k5g7xtk.wandb
scripts/wandb/run-20220502_002124-13vk88yy/: run-13vk88yy.wandb
scripts/wandb/run-20220502_002614-3fyrb7bh/: run-3fyrb7bh.wandb
scripts/wandb/run-20220502_074850-3q330b2z/: run-3q330b2z.wandb
scripts/ynet/: .gitignore  model.py  online_predict.py  online_test.py  ynet.py  ynet_old.py  ynet_srv_testing_node.py  ynet_sub_testing_node.py  ynet_zed.py
scripts/ynet/config/: sdd_trajnet.yaml
src/: clustering_module.cpp  depth2pc.cpp  global_path_generator.cpp  global_planner.cpp  gp_test.cpp  rrt.cpp  rrt_2.cpp  rrt_service.cpp
srv/: Jackal.srv  RRT_service.srv  State.srv  Step.srv  TrajectoryPredict.srv  Ynet.srv
worlds/: 301.world  301_actor.world  save.world  save2.world  test.world  world.world
yaml/: 301.yaml  sac.yaml  sac_mcts.yaml  test.yaml  test2.yaml  trc.yaml  trc_eval.yaml
(+271 files in other folders)
