<package format="2">
<name>social_navigation</name>
<version>0.0.0</version>
<description>The social navigation package</description>
<maintainer email="jeongwoo.oh@rllab.snu.ac.kr">jeongwoo</maintainer>
<license>TODO</license>

<buildtool_depend>catkin</buildtool_depend>
<build_depend>ackermann_msgs</build_depend>
<build_export_depend>ackermann_msgs</build_export_depend>
<exec_depend>ackermann_msgs</exec_depend>
<buildtool_depend>catkin</buildtool_depend>
<build_depend>message_generation</build_depend>
<build_depend>roscpp</build_depend>
<build_depend>rospy</build_depend>
<build_depend>sensor_msgs</build_depend>
<build_depend>geometry_msgs</build_depend>
<build_depend>nav_msgs</build_depend>
<build_depend>std_msgs</build_depend>
<build_depend>gazebo_msgs</build_depend>
<build_depend>sensor_msgs</build_depend>
<build_depend>gazebo_ext_msgs</build_depend>
<build_depend> zed_interfaces </build_depend>
<build_depend>image_geometry</build_depend>
<build_export_depend>image_geometry</build_export_depend>
<exec_depend>image_geometry</exec_depend>
<build_export_depend>roscpp</build_export_depend>
<build_export_depend>rospy</build_export_depend>
<build_export_depend>sensor_msgs</build_export_depend>
<build_export_depend>std_msgs</build_export_depend>
<exec_depend>roscpp</exec_depend>
<exec_depend>rospy</exec_depend>
<exec_depend>sensor_msgs</exec_depend>
<exec_depend>message_runtime</exec_depend>
<exec_depend>std_msgs</exec_depend>
<exec_depend>geometry_msgs</exec_depend>
<exec_depend>nav_msgs</exec_depend>
<exec_depend>gazebo_msgs</exec_depend>
<exec_depend>sensor_msgs</exec_depend>
<exec_depend>gazebo_ext_msgs</exec_depend>
<exec_depend>fake_localization</exec_depend>
<exec_depend>joy</exec_depend>
<exec_depend>prius_description</exec_depend>
<exec_depend>robot_state_publisher</exec_depend>
<exec_depend>rviz</exec_depend>
<exec_depend>sensor_msgs</exec_depend>
<exec_depend>tf2_ros</exec_depend>
<exec_depend>tf2_geometry_msgs</exec_depend>
<buildtool_depend>catkin</buildtool_depend>
<export>
</export>
</package>
